--- a/index.html
+++ b/index.html
@@ -109,5 +109,7 @@
 </head>
 <body class="antialiased">
     <div id="root"></div>
+    <!-- CRUCIAL : Cette ligne lance l'application -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
